# Competition

./: .clang-format  .gitignore  ABVTAOWH.txt  ACHQFVTR.txt  AEFYIUVM.txt  AGENTS.md  AIURQJOS.txt  AKDDTILA.txt  AOCYFPWH.txt  AOVSLEOF.txt  APAQBBQP.txt  APUEGBYB.txt  ARNUOWNM.txt  AVABYXXC.txt  AWHIKDWQ.txt  BADGGIPL.txt  BAIUUOBP.txt  BAKFDDBY.txt  BCLKQVYP.txt  BESDLEPB.txt  BGMTDVSP.txt  BJOLAPJS.txt  BKQHWLYG.txt  BLDXEVEN.txt  BNJQVCAX.txt  BONOVXAX.txt  BRFKVWDJ.txt  BUGXIPKQ.txt  BVOHPIXR.txt  BXGAMXOM.txt  BXGCYHJN.txt  BXUYNUBI.txt  CASAJYXS.txt  CBVVLGYN.txt  CBXDQVAS.txt  CCJDIFHA.txt  CDIOIJLB.txt  CGADGQGJ.txt  CHPOEJXA.txt  CHUQAAOL.txt  (+341 more)
.develop/: Design.md
N13/: graphic.cpp  rotate_donut_3d_2.cpp
cjs/: oj-20211002-C.cpp  oj-20211023-A.cpp  oj-20211023-D.cpp  oj-p1.cpp  oj-p131.cpp  oj-p159.cpp  oj-p256.cpp  oj-p50.cpp  oj-p56-2.cpp  oj-p56.cpp  oj-p57.cpp  oj-p58.cpp  oj-p6.cpp  oj-p63.cpp  oj-p7.cpp  oj-p73.cpp  oj-p8.cpp  oj-p81.cpp  oj-p86.cpp  oj-p87.cpp
documents/: OI.xmind  fragments.md  high-difficulty.md  oier-notices.md
exp/: 血の记忆.txt
experience/: rules.txt
fuck/: fuck.ccf.cpp
jtx/: P1001.cpp
luogu/: P1003.cpp  P1250.cpp  P1836.cpp  P2277.cpp  P3374.cpp  P3642.cpp  P4008.cpp
noip/: noip-2021-number-producer.cpp  noip-2021-number.cpp
other/: README.md  RadixSort.cpp  bs.cpp  dec2bin.cpp  pic.cpp  radix_sort.cpp  test.cpp  test.s  test1.cpp
source/: .clang-format
templates/: bit.cpp  segament_tree.cpp  segament_tree_struct.cpp
tricks/: dec2bin.cpp
utils/: compile-all.sh  luogu.sh  run.sh
website/: .gitignore  (+6 more)
(+3804 files in other folders)
